# s3

./: .gitignore  .gitmodules  .waheguru  Dr Christoff Parr - Galios Fields  FF.odt  Makefile  Project Outline.odt  README  README.md
server/: .format_everything.sh  CONFIGFORMAT  Makefile  Makefile.am  README  TODO  binarysearch.c  binarysearch.h  cleanup  config.c  config.h  configformat.2  configure.ac  dbp.c  dbp.h  defines.h  file.c  file.h  filemgmt.c  filemgmt.h  hash_table.c  hash_table.h  insert_users.sh  list.c  list.h  logger.c  logger.h  logs.c  logs.h  main.c  memory.c  memory.h  server.c  strings.c  strings.h
server/config/: config.c  config.h
server/crypto/: sha.c  sha.h
server/data/: data.h
server/data-structures/: hash_table.c  hash_table.h  linked_list.c  linked_list.h  list.c  list.h
server/databases/: README  database.c  database.h  sqlite_database.c
server/dataparser/: data.c  data.h
server/errors/: errorhandler.c  errorhandler.h
server/files/: file.c  file.h  filemgmt.c  filemgmt.h  path.c  path.h  paths.c  paths.h
server/general/: binarysearch.c  binarysearch.h  define.h  defines.h  string.c  string.h  strings.c  strings.h
server/logger/: Readme.md  logs.c  logs.h  messages.h  output.c
server/logs/: logs.c  logs.h
server/memdbg/: Readme.md  memory.c  memory.h
server/networking/: PROTOCOL  defines.h  network.c  network.h
server/output/: output.c  output.h
server/parser/: lexer.c  lexer.h  parser.c  parser.h
server/protocol/: action-create.c  action-delete.c  action-request.c  action-update.c  auth.c  auth.h  build.h  (+12 more)
(+63 files in other folders)
