bin_PROGRAMS = main
main_CPPFLAGS = -I/usr/include/mysql
main_LDADD = -lmysqlclient

main_SOURCES = ./general/binarysearch.c \
./general/strings.c \
./data-structures/hash_table.c \
./data-structures/list.c \
./dbp.c \
./files/filemgmt.c \
./files/file.c \
./memdbg/memory.c \
./server.c \
./databases/database.c \
./config/config.c \
./protocol/create.c \
./protocol/notification.c \
./protocol/protocol.c \
./networking/network.c \
./parser/parser.c \
./parser/lexer.c \
./logs/logs.c \
./threading/threads.c

